# chess-on-chain

./: .clippy.toml  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  CNAME  Cargo.toml  LICENSE  README.md  abi-gen.sh  about.html  account.html  build.sh  eslint.config.mjs  measure_gas.sh  package.json  partners.html  rust-toolchain.toml  tsconfig.json
.github/workflows/: audit.yml  deploy.yml  test.yml
.opencode/plans/: gas-optimization.md
.opencode/skills/protocol-pawns/: SKILL.md
_app/: version.json
_app/immutable/assets/: 0.CG2UC_3v.css  0._NHD63S5.css  2.BrDJ48uP.css  3.Bpih4St4.css  TxSnackbar.9xigL6o3.css  _layout.C6XxuIKM.css  _layout.GxL28a7a.css  _page.s1gcTcKd.css  index.UVk32epH.css  modal.0koi2RSE.css  modal.B15qmpzp.css
_app/immutable/chunks/: Button.BU-c0vJM.js  CommonLabel.B513-OrE.js  CommonLabel.Bz6vWofr.js  CommonLabel.J5kfADpm.js  CommonLabel.M6JCeelc.js  CommonLabel.bBJxefWn.js  MessageBox.Dn6QInaP.js  TxSnackbar.svelte_svelte_type_style_lang.DZgHUBp0.js  TxSnackbar.svelte_svelte_type_style_lang.DiUD2h9M.js  TxSnackbar.svelte_svelte_type_style_lang.DrrwYycT.js  TxSnackbar.svelte_svelte_type_style_lang.Dut1o6nx.js  TxSnackbar.svelte_svelte_type_style_lang.SBUzlTOL.js  browser-index.CCdjcUXN.js  browser-index.Cd-Pccmr.js  browser-index.DIPUwun-.js  browser-index.dg0Wmlfm.js  encoding.BWxdMvXO.js  encoding.Btks8E6z.js  encoding.Dd6HiIuP.js  entry.2io2w4A1.js  entry.C1aBWFYY.js  entry.D2Mcoqck.js  entry.DNdNmzbA.js  entry.WyovzCaQ.js  entry.lkZpUAuP.js  index.-W7m-AJQ.js  index.3JF5Opj8.js  index.B85w7t3t.js  index.BDryIpJp.js  index.BW8Mj2kp.js  index.Bi7iLXbw.js  index.C5S5io0I.js  index.CL98vZbv.js  index.CQGtpnNW.js  index.CXEoh7lO.js  index.CvUyNVo2.js  index.DQoaeX7X.js  index.DXatJLYt.js  index.DfukuyZ4.js  index.HEWX88Wz.js  (+23 more)
_app/immutable/entry/: app.Bv329eDL.js  app.C0FUUspk.js  app.D0SVfIbc.js  app.DkE-eL3k.js  app.DmLGbqCF.js  app.Dnipkudq.js  start.1kibWj9d.js  start.6ptSD5jS.js  start.BFBrwtms.js  start.CsoByc6g.js  start.DHZuiXep.js  start.yI-8GUEo.js
_app/immutable/nodes/: 0.BCpdKlJn.js  0.Bhxy0gE6.js  0.C4Zsl8lE.js  0.Cw_6UgAM.js  0.DARN0_K5.js  0.DtDDL4rh.js  1.7IcuNmCk.js  1.C4zM9MoD.js  1.CI2e8vnX.js  1.CY5e8VU_.js  1.CkX-6Wd7.js  1.DmJB_lCo.js  2.BLnI7uhT.js  2.BQDPJRbi.js  2.CUZu4z6F.js  2.CbtNq6c6.js  2.CchzDm92.js  2.qTuRP4W8.js  3.Du2cbmwX.js  3.q2h1wjvE.js  4.1sNyXhqW.js  4.BWA5JIzm.js  4.C9UHVEuy.js  4.CB1HY0V4.js  4.CryW8TjV.js  4.De8djAaH.js  5.DOch2-xC.js  5.DP7lUTHM.js
abi/: index.d.ts
api/: .dev.vars  .gitignore  package.json  tsconfig.json  wrangler.toml
api/scripts/: generate-vapid-keys.ts  prepare-assets.mjs
api/src/: account.ts  acounts.ts  batch.ts  db.ts  do-sse.ts  events-stream.ts  events.ts  games.ts  global.d.ts  index.ts  info.ts  leaderboard.ts  notify.test.ts  notify.ts  push.ts  render-card.ts  routes.ts  type_test.ts  types.d.ts  wasm.d.ts  web-push-subpath.d.ts
app/: .eslintrc.cjs  .gitignore  README.md  _headers  package.json  svelte.config.js  tsconfig.json  uno.config.ts  vite.config.ts  wrangler.toml
app-old/: .env  package.json  tsconfig.json
app-old/src/: app.html  app.scss  variables.scss
app-old/src/lib/: screen-size.ts
app-old/src/routes/: +layout.svelte
app-old/src/theme/: _smui-theme.scss
app-old/static/: CNAME
app/src/: app.html  app.scss  hooks.server.ts
app/src/lib/: api.ts  browser.ts  format.ts  game.ts  prices.ts  pwa.ts  snackbar.ts  sse.ts  toast.ts  tokens.ts  util.ts  wager.ts
app/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
app/static/: llms.txt  manifest.json  robots.txt  sitemap.xml  smui.css  sw.js
assets/: hk-id.txt  hk-manifest.csv  hk-manifest.json
crates/chess/: Cargo.toml
crates/chess-common/: Cargo.toml
crates/chess-common/src/: lib.rs
crates/chess-engine/: Cargo.toml
crates/chess-engine/src/: board.rs  endgame.rs  game.rs  lib.rs  piece.rs  position.rs  square.rs  static_book.rs  transposition_table.rs  util.rs  zobrist_keys.rs
crates/chess-lib/: Cargo.toml
crates/chess-lib/src/: account.rs  bet.rs  challenge.rs  elo.rs  error.rs  event.rs  ft_receiver.rs  game.rs  iah.rs  internal.rs  lib.rs  matchmaking.rs  nada_bot.rs  old.rs  points.rs  social.rs  storage.rs  view.rs
crates/chess-lib/src/game/: old.rs
crates/chess-test/: Cargo.toml
crates/chess-test/tests/: chess.rs
crates/chess-test/tests/bet/: mod.rs
crates/chess-test/tests/gas/: mod.rs
crates/chess-test/tests/matchmaking/: mod.rs
crates/chess-test/tests/points/: mod.rs
crates/chess-test/tests/util/: call.rs  event.rs  macros.rs  mod.rs  view.rs
crates/chess-test/tests/wager/: mod.rs
crates/chess/src/: lib.rs
crates/download-mainnet-state/: Cargo.toml
crates/download-mainnet-state/src/: main.rs
crates/iah-registry-stub/: Cargo.toml
crates/iah-registry-stub/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: indexer.rs  main.rs  send.rs
crates/nada-bot-stub/: Cargo.toml
crates/nada-bot-stub/src/: lib.rs
crates/test-token/: Cargo.toml
crates/test-token/src/: lib.rs
discovery/: ChessBoard.jsx  ChessGame.jsx  ChessGameLobby.jsx  ChessGameReplay.jsx
indexer/: migration.sql  pipeline.yaml
indexer/processor/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
landing/: .gitignore  astro.config.mjs  package.json  tsconfig.json  wrangler.toml
landing/public/: manifest.json  robots.txt  sitemap.xml
res/: chess-testing.wasm  chess.wasm  chess_abi.json  chess_abi.zst  chess_mainnet.wasm  chess_old.wasm  chess_testing.wasm  iah_registry_stub.wasm  mainnet_state.json  nada_bot_stub.wasm  nada_bot_stub_abi.json  nada_bot_stub_abi.zst  test_token.wasm  test_token_abi.json  test_token_abi.zst
scripts/: .gitignore  generate_static_data.py  generate_zobrist.py  setup.sh  zobrist.py
thunder-tests/: thunderCollection.json  thunderEnvironment.json  thunderclient.json
thunder-tests/collections/: tc_col_pikespeak.json  tc_col_social.json
thunder-tests/environments/: tc_env_default.json
wit/: index.schema.json  index.schema.json.br  index.ts  index.wit  types.ts
(+115 files in other folders)
