[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
dotenv = "0.15"
either = "1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
maplit = "1"
near-lake-framework = "0.7"
near-workspaces = { version = "0.22", default-features = false }
once_cell = "1"
owo-colors = "4"
primitive-types = { version = "0.14", default-features = false }
rand = { version = "0.10", default-features = false, features = ["alloc"] }
rand_chacha = "0.10"
rayon = "1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "1"
urlencoding = "2"

[workspace.dependencies.near-contract-standards]
version = "=5.27.0"

[workspace.dependencies.near-sdk]
version = "=5.27.0"
default-features = false
features = ["unstable"]

[profile]
[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"

[profile.test.package.'*']
codegen-units = 1
opt-level = 1
