[package]
name = "chess-engine"
version = "0.1.2"
authors = [
    "Adam McDaniel <adam.mcdaniel17@gmail.com>",
    "Mario Reder <mario.reder@pm.me>",
]
description = "A dependency-free chess engine library built to run anywhere."
license = "MIT"

[dependencies]
either.workspace = true
near-sdk.workspace = true
rand.workspace = true
rand_chacha.workspace = true
