[package]
name = "chess-engine"
version = "0.1.2"
authors = [
    "Adam McDaniel <adam.mcdaniel17@gmail.com>",
    "Mario Reder <mario.reder@pm.me>",
]
description = "A dependency-free chess engine library built to run anywhere."
license = "MIT"
edition = "2021"

[dependencies]
either.workspace = true
near-sdk.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
# Enables near-sdk's pure-Rust env fallbacks so the engine's `#[cfg(test)]`
# unit tests can run natively (env::used_gas, etc.). Dev-only: does not affect
# the on-chain contract build.
near-sdk = { workspace = true, features = ["unit-testing"] }
