[package]
name = "chess-lib"
version = "1.0.0"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
chess-engine = { path = "../chess-engine" }
maplit.workspace = true
near-contract-standards.workspace = true
near-sdk.workspace = true
primitive-types.workspace = true
serde_json.workspace = true
thiserror.workspace = true
urlencoding.workspace = true

[features]
integration-test = []
