[package]
name = "chess-test"
version = "1.0.0"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[dev-dependencies]
base64 = "0.22"
chess-common = { path = "../chess-common" }
chess-engine = { path = "../chess-engine" }
chess-lib = { path = "../chess-lib" }
test-token = { path = "../test-token" }
anyhow.workspace = true
futures.workspace = true
maplit.workspace = true
near-contract-standards.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
