[package]
name = "chess"
version = "1.0.0"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chess-lib = { path = "../chess-lib" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.near-sdk]
version = "5.0.0"
default-features = false
features = ["abi", "unstable"]

[features]
integration-test = ["chess-lib/integration-test"]
