[package]
name = "indexer"
version = "0.0.1"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[dependencies]
chess-common = { path = "../chess-common" }
chess-lib = { path = "../chess-lib" }
anyhow.workspace = true
async-stream.workspace = true
dotenv.workspace = true
futures.workspace = true
futures-core.workspace = true
futures-util.workspace = true
near-lake-framework.workspace = true
once_cell.workspace = true
owo-colors.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
