[package]
name = "test-token"
version = "0.1.0"
authors = ["Mario Reder <mario@orderly.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
[dependencies.near-contract-standards]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "89f8c2d776c8d00feb45239fdb15725527f1894b"

[dependencies.near-sdk]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "89f8c2d776c8d00feb45239fdb15725527f1894b"
default-features = false
features = ["unit-testing", "unstable"]
